Small change in page.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title> Hello Everyone...</title>
 </head>
 <body>
-<h1> Hello people.... ! </h1>
+<h1> Hello people.... ! It's a happy hour.</h1>
 </body>
 </html>
