--- a/module2solution/index.html
+++ b/module2solution/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Module-2 </title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
-<div><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
+<div class=" col-lg-4 col-md-6 col-sm-12">
+<div id="box">
+	<h2 class="item-name chicken">Chicken</h2>
+		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</div>
+<div class=" col-lg-4 col-md-6 col-sm-12">
+<div  id="box">
+	<h2 class="item-name beef">Beef</h2>
+		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</div>
+<div class=" col-lg-4 col-md-6 col-sm-12">
+<div id="box">
+	<h2 class="item-name name3 sushi">Sushi</h2>
+		<p class="content" style=>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</div>
+
 </body>
 </html>
