--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -6,6 +6,7 @@
 	<title> Bootstrap Starter Page</title>
 	<link rel="stylesheet" type="text/css" href="E:/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	
 </head>
 <body>
 	
@@ -36,19 +37,19 @@
 <div class=" col-lg-12 col-md-12 col-sm-12">
 <div id="box">
 	<h2 class="item-name chicken" id="no1">Chicken</h2>
-		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top.</a></p>
+		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top</a></p>
 </div>
 </div>
 <div class=" col-lg-12 col-md-12 col-sm-12">
 <div  id="box">
 	<h2 class="item-name beef" id="no2">Beef</h2>
-		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top.</a></p>
+		<p class="content">lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top</a></p>
 </div>
 </div>
 <div class=" col-lg-12 col-md-12 col-sm-12">
 <div id="box">
 	<h2 class="item-name name3 sushi" id="no3">Sushi</h2>
-		<p class="content" style=>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top.</a></p>
+		<p class="content" style=>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna alidua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="#top">Back to top</a></p>
 </div>
 </div>
 
