--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Bootstrap Starter Page</title>
-	<link rel="stylesheet" type="text/css" href="E:/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	
