--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 	
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="top">
+	<nav class="navbar navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="top">
   <a class="navbar-brand" href="#">Food, LLC</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarToggler">
-    <ul class="navbar-nav visible-xs">
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       
       <li class="nav-item">
         <a class="nav-link" href="#no1">Chicken</a>
