--- a/module3solution/index.html
+++ b/module3solution/index.html
@@ -12,12 +12,12 @@
 	
 	<nav class="navbar navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="top">
   <a class="navbar-brand" href="#">Food, LLC</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+  <div class="collapse navbar-collapse" id="navbarToggler">
+    <ul class="navbar-nav visible-xs">
       
       <li class="nav-item">
         <a class="nav-link" href="#no1">Chicken</a>
@@ -54,8 +54,8 @@
 </div>
 
 	<!-- jQuery (Bootstrap JS plugins depend on it) -->
-	<script type="text/javascript" src="E:/bootstrap/js/jquery-3.5.1.min.js"></script>
-	<script type="text/javascript" src="E:/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	
 </body>
 </html>
